// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CDropdownToggle customize 1`] = `
<div>
  <button
    class="btn btn-primary dropdown-toggle dropdown-toggle-split"
    tabindex="0"
    type="button"
  >
    Test
    <span
      class="visually-hidden"
    >
      Toggle Dropdown
    </span>
  </button>
</div>
`;

exports[`loads and displays CDropdownToggle component 1`] = `
<div>
  <button
    class="btn dropdown-toggle"
    tabindex="0"
    type="button"
  >
    Test
  </button>
</div>
`;
